# ContextMenuMaster

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  PROGRESS.md  README.md  build_debug.bat  build_release.bat
src/: main.cpp
src/app/: gui_main.cpp
src/platform/windows/: com_menu_probe.cpp  com_menu_probe.h  context_menu.cpp  context_menu.h  i18n.cpp  i18n.h  icon_extract.cpp  icon_extract.h  menu_scanner.cpp  menu_scanner.h
ui/: index.html
